--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -23,19 +23,33 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pytorch-functional in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (0.4.11)\n",
+      "Requirement already satisfied: networkx in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (2.8.7)\n",
+      "Requirement already satisfied: matplotlib in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (3.6.1)\n",
+      "Requirement already satisfied: tqdm in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (4.64.1)\n",
+      "Requirement already satisfied: torch>=1.9.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from pytorch-functional) (1.12.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (9.2.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.0.5)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: numpy>=1.19 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.23.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (4.37.4)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Requirement already satisfied: typing_extensions in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torch>=1.9.0->pytorch-functional) (4.3.0)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "!pip install pytorch-functional networkx matplotlib tqdm"
    ]
   },
   {
@@ -93,13 +107,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=<Placeholder at 0x7f51ffe1b820; child of 0; parent of 0>\n",
-      "y=<Placeholder at 0x7f51ffe1bfd0; child of 0; parent of 0>\n",
+      "x=<Placeholder at 0x7f43a5cd2310; child of 0; parent of 0>\n",
+      "y=<Placeholder at 0x7f44584d29a0; child of 0; parent of 0>\n",
       "\n",
       "After creating z = x + y:\n",
-      "x=<Placeholder at 0x7f51ffe1b820; child of 0; parent of 1>\n",
-      "y=<Placeholder at 0x7f51ffe1bfd0; child of 0; parent of 1>\n",
-      "z=<Placeholder at 0x7f51ffe1baf0; child of 2; parent of 0>\n"
+      "x=<Placeholder at 0x7f43a5cd2310; child of 0; parent of 1>\n",
+      "y=<Placeholder at 0x7f44584d29a0; child of 0; parent of 1>\n",
+      "z=<Placeholder at 0x7f44584d2940; child of 2; parent of 0>\n"
      ]
     }
    ],
@@ -152,9 +166,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.children=[<Placeholder at 0x7f51ffe1baf0; child of 2; parent of 0>]\n",
-      "y.children=[<Placeholder at 0x7f51ffe1baf0; child of 2; parent of 0>]\n",
-      "z.parents=(<Placeholder at 0x7f51ffe1b820; child of 0; parent of 1>, <Placeholder at 0x7f51ffe1bfd0; child of 0; parent of 1>)\n"
+      "x.children=[<Placeholder at 0x7f44584d2940; child of 2; parent of 0>]\n",
+      "y.children=[<Placeholder at 0x7f44584d2940; child of 2; parent of 0>]\n",
+      "z.parents=(<Placeholder at 0x7f43a5cd2310; child of 0; parent of 1>, <Placeholder at 0x7f44584d29a0; child of 0; parent of 1>)\n"
      ]
     }
    ],
@@ -243,9 +257,9 @@
     {
      "data": {
       "text/plain": [
-       "[<Placeholder at 0x7f51ff82d700; child of 2; parent of 1>,\n",
-       " <Placeholder at 0x7f51ffd7a4f0; child of 2; parent of 1>,\n",
-       " <Placeholder at 0x7f51ff82d670; child of 2; parent of 1>]"
+       "[<Placeholder at 0x7f43a5cd2cd0; child of 2; parent of 1>,\n",
+       " <Placeholder at 0x7f43a5cd1d60; child of 2; parent of 1>,\n",
+       " <Placeholder at 0x7f43a5cd1df0; child of 2; parent of 1>]"
       ]
      },
      "execution_count": 7,
@@ -332,9 +346,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx=tensor([0.2879])\n",
-      "ry=tensor([0.8662])\n",
-      "model((rx,ry))=tensor([0.2750])\n"
+      "rx=tensor([0.6518])\n",
+      "ry=tensor([0.1143])\n",
+      "model((rx,ry))=tensor([0.4594])\n"
      ]
     }
    ],
@@ -432,7 +446,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.digraph.DiGraph at 0x7f51fd846310>"
+       "<networkx.classes.digraph.DiGraph at 0x7f43a56ef220>"
       ]
      },
      "execution_count": 12,
@@ -512,7 +526,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.digraph.DiGraph at 0x7f51ff72ef70>"
+       "<networkx.classes.digraph.DiGraph at 0x7f43a55fba90>"
       ]
      },
      "execution_count": 14,
@@ -561,7 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,19 +636,19 @@
     "\n",
     "\n",
     "inputs, outputs = create_model()\n",
-    "model = FunctionalModel(inputs=inputs, outputs=outputs).cuda()\n",
+    "model = FunctionalModel(inputs=inputs, outputs=outputs).to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c8a6f80d4cc40ab926e1535c3b98ee3",
+       "model_id": "573c9cbb90b34fca8c915f96d3c14fe1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -640,16 +663,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.522%\n",
-      "Average training accuracy in epoch 2: 98.990%\n",
-      "Average training accuracy in epoch 3: 99.218%\n",
-      "Average training accuracy in epoch 4: 99.456%\n",
-      "Average training accuracy in epoch 5: 99.476%\n"
+      "Average training accuracy in epoch 1: 95.670%\n",
+      "Average training accuracy in epoch 2: 98.874%\n",
+      "Average training accuracy in epoch 3: 99.222%\n",
+      "Average training accuracy in epoch 4: 99.396%\n",
+      "Average training accuracy in epoch 5: 99.466%\n"
      ]
     }
    ],
    "source": [
-    "def traininig(model, optimizer, loss_fn, epochs):\n",
+    "def traininig(model, optimizer, epochs):\n",
     "    model.train()\n",
     "\n",
     "    loss_fn = nn.CrossEntropyLoss()\n",
@@ -659,8 +682,8 @@
     "        mean_acc_n = 0\n",
     "\n",
     "        for x, y in train_dl:\n",
-    "            x = x.cuda()\n",
-    "            y = y.cuda()\n",
+    "            x = x.to(device)\n",
+    "            y = y.to(device)\n",
     "\n",
     "            model.zero_grad()\n",
     "            outs = model(x)\n",
@@ -676,33 +699,35 @@
     "        print(f\"Average training accuracy in epoch {epoch+1}: {mean_acc / mean_acc_n * 100 : <6.3f}%\")\n",
     "\n",
     "\n",
-    "traininig(model, optimizer, loss_fn, epochs=5)"
+    "traininig(model, optimizer, epochs=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average validation accuracy: 99.040%\n"
+      "Average validation accuracy: 99.230%\n"
      ]
     }
    ],
    "source": [
-    "def evaluation(model, loss_fn):\n",
+    "def evaluation(model):\n",
     "    model.eval()\n",
     "\n",
     "    mean_acc = 0\n",
     "    mean_acc_n = 0\n",
     "\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "\n",
     "    with torch.no_grad():\n",
     "        for x, y in valid_dl:\n",
-    "            x = x.cuda()\n",
-    "            y = y.cuda()\n",
+    "            x = x.to(device)\n",
+    "            y = y.to(device)\n",
     "            outs = model(x)\n",
     "            accuracy = torch.mean((outs.argmax(1) == y).to(torch.float)).detach().cpu()\n",
     "            mean_acc += accuracy\n",
@@ -711,7 +736,7 @@
     "    print(f\"Average validation accuracy: {mean_acc / mean_acc_n * 100 : <6.3f}%\")\n",
     "\n",
     "\n",
-    "evaluation(model, loss_fn)"
+    "evaluation(model)"
    ]
   },
   {
@@ -734,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +772,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f68835da3f864bba97226fd167f6b25d",
+       "model_id": "e5f5b9559ccb48b9a337f2c7920afe08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -762,22 +787,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.416%\n",
-      "Average training accuracy in epoch 2: 98.876%\n",
-      "Average training accuracy in epoch 3: 99.196%\n",
-      "Average training accuracy in epoch 4: 99.418%\n",
-      "Average training accuracy in epoch 5: 99.484%\n",
-      "Average validation accuracy: 99.250%\n"
+      "Average training accuracy in epoch 1: 94.888%\n",
+      "Average training accuracy in epoch 2: 98.988%\n",
+      "Average training accuracy in epoch 3: 99.222%\n",
+      "Average training accuracy in epoch 4: 99.420%\n",
+      "Average training accuracy in epoch 5: 99.434%\n",
+      "Average validation accuracy: 98.690%\n"
      ]
     }
    ],
    "source": [
-    "inputs, outputs = create_model()\n",
-    "model = FunctionalModel(inputs=inputs, outputs=outputs, enable_cuda_graphs=True)\n",
-    "optimizer = torch.optim.Adam(model.parameters())\n",
+    "if torch.cuda.is_available():\n",
+    "    inputs, outputs = create_model()\n",
+    "    model = FunctionalModel(inputs=inputs, outputs=outputs, enable_cuda_graphs=True)\n",
+    "    optimizer = torch.optim.Adam(model.parameters())\n",
     "\n",
-    "traininig(model, optimizer, loss_fn, epochs=5)\n",
-    "evaluation(model, loss_fn)"
+    "    traininig(model, optimizer, epochs=5)\n",
+    "    evaluation(model)\n",
+    "else:\n",
+    "    print(\"CUDA Graphs require CUDA capable device!\")"
    ]
   }
  ],
