--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -15,9 +15,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You don't need any knowledge about the inner workings to use Pytorch Functional.\n",
+    "You don't need any knowledge of the inner workings of Pytorch Functional to use it.\n",
     "\n",
-    "However, here you'll learn some of it anyway. But you don't need to, you know?"
+    "In most cases, after seeing a few examples, you're good to go.\n",
+    "\n",
+    "If you used Keras Functional API before, you don't even need any learning materials.\n",
+    "\n",
+    "However, this notebooks explains Pytorch Functional a little bit deeper, in case you just want to know stuff."
    ]
   },
   {
