Update the notebook wording

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "If you used Keras Functional API before, you don't even need any learning materials.\n",
     "\n",
-    "However, this notebooks explains Pytorch Functional a little bit deeper, in case you just want to know stuff."
+    "However, this notebooks explains Pytorch Functional a little bit deeper, in case you just want to know more stuff."
    ]
   },
   {
@@ -91,7 +91,7 @@
    "source": [
     "## Placeholders && fun\n",
     "### Simple example\n",
-    "We'll first look into how to work with placeholders."
+    "We'll first look at how to work with placeholders."
    ]
   },
   {
@@ -227,6 +227,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can see that addition was converted to `AddOpLayer`.\n",
+    "\n",
+    "If we want to use a custom operator or function on placeholders, we need to create an nn.Module.\n",
+    "\n",
+    "For simple operators like addition, Pytorch Functional will do it for us automatically!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### A deeper example"
    ]
   },
@@ -234,7 +245,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll still refrain from creating neural networks. We'll create them in a moment, I promise!"
+    "We will create another, more complicated model.\n",
+    "\n",
+    "Still no neural networks, but we'll get to them, I promise!"
    ]
   },
   {
@@ -309,7 +322,7 @@
    "source": [
     "Moreover, we see what Python does internally, when `sum` is called. It's just a bunch of additions! Obviously...\n",
     "\n",
-    "Let us create a Model from our graph!"
+    "Let us create a Functional Model from this graph!"
    ]
   },
   {
@@ -384,8 +397,9 @@
    "source": [
     "Right now, we were manipulating the data with `+`, `-` and `*` operators.\n",
     "\n",
-    "Most of Python's operators are already defined for placeholders: `+, -, *, /, //, %, abs`.\n",
-    "They will register correctly in the model."
+    "Most of Python's operators are already defined for placeholders, e.g.: `+, -, *, /, //, %, abs`.\n",
+    "\n",
+    "They will be converted to ``nn.Module`` and registered correctly in the model."
    ]
   },
   {
