Change words in notebook

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -770,9 +770,9 @@
    "source": [
     "Hurray! We've trained a network that is pretty accurate. What else can we improve?\n",
     "\n",
-    "Performance! With Pytorch Functional you can enable CUDA Graphs support using just one argument.\n",
+    "Maybe performance? With Pytorch Functional you can enable CUDA Graphs using just one argument.\n",
     "\n",
-    "This will work especially well for models with many smaller layers, where CPU calls are slower than GPU kernel execution."
+    "This will work especially well for models with many small layers or where CPU calls are slower than GPU kernel execution."
    ]
   },
   {
