Update notebook after renaming

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -124,15 +124,15 @@
    "source": [
     "x = Input(shape=(5,))\n",
     "y = Input(shape=(5,))\n",
-    "print(f\"{x=}\")\n",
-    "print(f\"{y=}\")\n",
+    "print(f\"x={x}\")\n",
+    "print(f\"y={y}\")\n",
     "print()\n",
     "\n",
     "z = x + y\n",
     "print(\"After creating z = x + y:\")\n",
-    "print(f\"{x=}\")\n",
-    "print(f\"{y=}\")\n",
-    "print(f\"{z=}\")"
+    "print(f\"x={x}\")\n",
+    "print(f\"y={y}\")\n",
+    "print(f\"z={z}\")"
    ]
   },
   {
@@ -177,10 +177,10 @@
     }
    ],
    "source": [
-    "print(f\"{x.children=}\")\n",
-    "print(f\"{y.children=}\")\n",
+    "print(f\"x.children={x.children}\")\n",
+    "print(f\"y.children={y.children}\")\n",
     "\n",
-    "print(f\"{z.parents=}\")"
+    "print(f\"z.parents={z.parents}\")"
    ]
   },
   {
@@ -377,9 +377,9 @@
     "    1,\n",
     ")\n",
     "\n",
-    "print(f\"{rx=}\")\n",
-    "print(f\"{ry=}\")\n",
-    "print(f\"{model((rx,ry))=}\")\n",
+    "print(f\"rx={rx}\")\n",
+    "print(f\"ry={ry=}\")\n",
+    "print(f\"model((rx, ry))={model((rx,ry))}\")\n",
     "\n",
     "assert model((rx, ry)) == ((rx + ry) + (rx - ry) + (rx * ry)) / 3, \"Something went wrong...\""
    ]
