--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -378,7 +378,7 @@
     ")\n",
     "\n",
     "print(f\"rx={rx}\")\n",
-    "print(f\"ry={ry=}\")\n",
+    "print(f\"ry={ry}\")\n",
     "print(f\"model((rx, ry))={model((rx,ry))}\")\n",
     "\n",
     "assert model((rx, ry)) == ((rx + ry) + (rx - ry) + (rx * ry)) / 3, \"Something went wrong...\""
