--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -570,7 +570,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create and train a small ResNet example that will work on MNIST dataset."
+    "Let us create and train a small ResNet example that will work on MNIST dataset.\n",
+    "\n",
+    "To train the model quickly, you need to have CUDA capable device.\n",
+    "\n",
+    "On Colab, be sure to set \"Hardware accelerator\" to \"GPU\"."
    ]
   },
   {
