Rename Placeholder -> SymbolicTensor

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -111,13 +111,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=<Placeholder at 0x7fd2db853c10; child of 0; parent of 0>\n",
-      "y=<Placeholder at 0x7fd2dce95f40; child of 0; parent of 0>\n",
+      "x=<SymbolicTensor at 0x7fd2db853c10; child of 0; parent of 0>\n",
+      "y=<SymbolicTensor at 0x7fd2dce95f40; child of 0; parent of 0>\n",
       "\n",
       "After creating z = x + y:\n",
-      "x=<Placeholder at 0x7fd2db853c10; child of 0; parent of 1>\n",
-      "y=<Placeholder at 0x7fd2dce95f40; child of 0; parent of 1>\n",
-      "z=<Placeholder at 0x7fd3900badf0; child of 2; parent of 0>\n"
+      "x=<SymbolicTensor at 0x7fd2db853c10; child of 0; parent of 1>\n",
+      "y=<SymbolicTensor at 0x7fd2dce95f40; child of 0; parent of 1>\n",
+      "z=<SymbolicTensor at 0x7fd3900badf0; child of 2; parent of 0>\n"
      ]
     }
    ],
@@ -170,9 +170,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.children=[<Placeholder at 0x7fd3900badf0; child of 2; parent of 0>]\n",
-      "y.children=[<Placeholder at 0x7fd3900badf0; child of 2; parent of 0>]\n",
-      "z.parents=(<Placeholder at 0x7fd2db853c10; child of 0; parent of 1>, <Placeholder at 0x7fd2dce95f40; child of 0; parent of 1>)\n"
+      "x.children=[<SymbolicTensor at 0x7fd3900badf0; child of 2; parent of 0>]\n",
+      "y.children=[<SymbolicTensor at 0x7fd3900badf0; child of 2; parent of 0>]\n",
+      "z.parents=(<SymbolicTensor at 0x7fd2db853c10; child of 0; parent of 1>, <SymbolicTensor at 0x7fd2dce95f40; child of 0; parent of 1>)\n"
      ]
     }
    ],
@@ -274,9 +274,9 @@
     {
      "data": {
       "text/plain": [
-       "[<Placeholder at 0x7fd2db30a490; child of 2; parent of 1>,\n",
-       " <Placeholder at 0x7fd2db30a760; child of 2; parent of 1>,\n",
-       " <Placeholder at 0x7fd2db853e20; child of 2; parent of 1>]"
+       "[<SymbolicTensor at 0x7fd2db30a490; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7fd2db30a760; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7fd2db853e20; child of 2; parent of 1>]"
       ]
      },
      "execution_count": 7,
