Update notebook to symbolic tensors

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -13,7 +13,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "You don't need any knowledge of the inner workings of Pytorch Functional to use it.\n",
     "\n",
@@ -27,7 +31,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -89,9 +97,9 @@
     }
    },
    "source": [
-    "## Placeholders && fun\n",
+    "## Having fun with symbolic tensors\n",
     "### Simple example\n",
-    "We'll first look at how to work with placeholders."
+    "We'll first look at what we can do with symbolic tensors."
    ]
   },
   {
@@ -143,12 +151,12 @@
     }
    },
    "source": [
-    "We created two placeholders: `x` and `y`.\n",
-    "Their sum is represented by another placeholder: `z`, which was added to the graph of computations.\n",
+    "We created two symbolic tensors: `x` and `y`.\n",
+    "Their sum is represented by another symbolic tensor: `z`, which was added to the graph of computations.\n",
     "\n",
-    "When we print the placeholders, we can see that `z` has two parents and both `x` and `y` have one child.\n",
+    "When we print the tensors, we can see that `z` has two parents and both `x` and `y` have one child.\n",
     "\n",
-    "If we need, we can even retrieve the instances of children and parents.\n",
+    "If we need, we can even retrieve the instances of specific children and parents.\n",
     "\n",
     "As it is in life, you cannot change your parents, thus `.parents` are immutable. But `.children` are not!"
    ]
@@ -220,30 +228,42 @@
    ],
    "source": [
     "plt.figure(figsize=(7, 4))\n",
-    "gr = draw_computation_graph(inputs=(x, y), node_text_func=lambda x: \"\")"
+    "draw_computation_graph(inputs=(x, y), node_text_func=lambda x: \"\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We can see that addition was converted to `AddOpLayer`.\n",
     "\n",
-    "If we want to use a custom operator or function on placeholders, we need to create an nn.Module.\n",
+    "If we want to use a custom operator or function on a symbolic tensor, we need to create an nn.Module.\n",
     "\n",
     "For simple operators like addition, Pytorch Functional will do it for us automatically!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### A deeper example"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We will create another, more complicated model.\n",
     "\n",
@@ -253,7 +273,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "x = Input(shape=())\n",
@@ -269,7 +293,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -290,7 +318,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We can see that the three intermediate values are children of 2 nodes and parent for 1 node."
    ]
@@ -298,7 +330,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -318,7 +354,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Moreover, we see what Python does internally, when `sum` is called. It's just a bunch of additions! Obviously...\n",
     "\n",
@@ -328,7 +368,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -357,7 +401,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -386,32 +434,48 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "As we see, after defining the model on placeholders, it works perfectly fine when launched on real data!"
+    "As we see, after defining the model on symbolic tensors, it works perfectly fine when launched on real data!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Right now, we were manipulating the data with `+`, `-` and `*` operators.\n",
     "\n",
-    "Most of Python's operators are already defined for placeholders, e.g.: `+, -, *, /, //, %, abs`.\n",
+    "Most of Python's operators are already defined for symbolic tensors, e.g.: `+, -, *, /, //, %, abs`.\n",
     "\n",
     "They will be converted to ``nn.Module`` and registered correctly in the model."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "## Placeholders && real layers"
+    "## Symbolic tensors && real layers"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "However, in deep learning, we rarely use just standard operations. Instead, we rely on layers to transform the data.\n",
     "Let's create a small linear model with a few hidden layers!"
@@ -420,7 +484,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -451,7 +519,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Looks like it was a succes. Let's see how it looks like as a graph!"
    ]
@@ -459,7 +531,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -479,21 +555,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "It's a rather simple topology."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### An odd one"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We'll now create a model that consists of a few towers.\n",
     "\n",
@@ -507,7 +595,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_tower():\n",
@@ -531,7 +623,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -552,7 +648,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Pardon the unnecessary intersections of the edges!\n",
     "\n",
@@ -561,14 +661,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Functional API in real models"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let us create and train a small ResNet example that will work on MNIST dataset.\n",
     "\n",
@@ -580,7 +688,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")"
@@ -589,7 +701,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Creating dataset\n",
@@ -608,7 +724,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def create_model():\n",
@@ -647,7 +767,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -709,7 +833,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -745,14 +873,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Acceleration"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Hurray! We've trained a network that is pretty accurate. What else can we improve?\n",
     "\n",
@@ -764,7 +900,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
