--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -46,25 +46,22 @@
       "Requirement already satisfied: matplotlib in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (3.6.1)\r\n",
       "Requirement already satisfied: tqdm in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (4.64.1)\r\n",
       "Requirement already satisfied: torch>=1.9.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from pytorch-functional) (1.12.1)\r\n",
-      "Requirement already satisfied: numpy>=1.19 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.23.1)\r\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (9.2.0)\r\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (4.37.4)\r\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (21.3)\r\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (3.0.9)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.4.4)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (2.8.2)\r\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.0.5)\r\n",
       "Requirement already satisfied: cycler>=0.10 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (0.11.0)\r\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (21.3)\r\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (4.37.4)\r\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.0.5)\r\n",
+      "Requirement already satisfied: numpy>=1.19 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.23.1)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (2.8.2)\r\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (9.2.0)\r\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (1.4.4)\r\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from matplotlib) (3.0.9)\r\n",
       "Requirement already satisfied: six>=1.5 in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\r\n",
       "Requirement already satisfied: typing_extensions in /home/gaha/miniconda3/envs/pyt/lib/python3.9/site-packages (from torch>=1.9.0->pytorch-functional) (4.3.0)\r\n"
      ]
     }
    ],
    "source": [
-    "!pip install pytorch-functional networkx matplotlib tqdm\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "!pip install pytorch-functional networkx matplotlib tqdm"
    ]
   },
   {
@@ -122,13 +119,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=<SymbolicTensor at 0x7f4d5f51d9a0; child of 0; parent of 0>\n",
-      "y=<SymbolicTensor at 0x7f4e1459abb0; child of 0; parent of 0>\n",
+      "x=<SymbolicTensor at 0x7f0f67d1c1c0; child of 0; parent of 0>\n",
+      "y=<SymbolicTensor at 0x7f101c5a82e0; child of 0; parent of 0>\n",
       "\n",
       "After creating z = x + y:\n",
-      "x=<SymbolicTensor at 0x7f4d5f51d9a0; child of 0; parent of 1>\n",
-      "y=<SymbolicTensor at 0x7f4e1459abb0; child of 0; parent of 1>\n",
-      "z=<SymbolicTensor at 0x7f4d5f538a30; child of 2; parent of 0>\n"
+      "x=<SymbolicTensor at 0x7f0f67d1c1c0; child of 0; parent of 1>\n",
+      "y=<SymbolicTensor at 0x7f101c5a82e0; child of 0; parent of 1>\n",
+      "z=<SymbolicTensor at 0x7f101c5a81c0; child of 2; parent of 0>\n"
      ]
     }
    ],
@@ -181,9 +178,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.children=[<SymbolicTensor at 0x7f4d5f538a30; child of 2; parent of 0>]\n",
-      "y.children=[<SymbolicTensor at 0x7f4d5f538a30; child of 2; parent of 0>]\n",
-      "z.parents=(<SymbolicTensor at 0x7f4d5f51d9a0; child of 0; parent of 1>, <SymbolicTensor at 0x7f4e1459abb0; child of 0; parent of 1>)\n"
+      "x.children=[<SymbolicTensor at 0x7f101c5a81c0; child of 2; parent of 0>]\n",
+      "y.children=[<SymbolicTensor at 0x7f101c5a81c0; child of 2; parent of 0>]\n",
+      "z.parents=(<SymbolicTensor at 0x7f0f67d1c1c0; child of 0; parent of 1>, <SymbolicTensor at 0x7f101c5a82e0; child of 0; parent of 1>)\n"
      ]
     }
    ],
@@ -302,7 +299,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[<SymbolicTensor at 0x7f4d5efbdd00; child of 2; parent of 1>,\n <SymbolicTensor at 0x7f4d5f4d3df0; child of 2; parent of 1>,\n <SymbolicTensor at 0x7f4d5ef3edc0; child of 2; parent of 1>]"
+      "text/plain": "[<SymbolicTensor at 0x7f0f33d04a00; child of 2; parent of 1>,\n <SymbolicTensor at 0x7f0f67d1c670; child of 2; parent of 1>,\n <SymbolicTensor at 0x7f0f33ce5dc0; child of 2; parent of 1>]"
      },
      "execution_count": 7,
      "metadata": {},
@@ -391,9 +388,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx=tensor([0.3206])\n",
-      "ry=tensor([0.6105])\n",
-      "model(rx, ry)=tensor([0.2790])\n"
+      "rx=tensor([0.7244])\n",
+      "ry=tensor([0.0632])\n",
+      "model(rx, ry)=tensor([0.4982])\n"
      ]
     }
    ],
@@ -796,7 +793,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e432e7f3c90648fdbb5db77dac1cbc6b"
+       "model_id": "78ae6e07cd6242a78bde37c2aff9469c"
       }
      },
      "metadata": {},
@@ -806,11 +803,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 94.910%\n",
-      "Average training accuracy in epoch 2: 98.932%\n",
-      "Average training accuracy in epoch 3: 99.252%\n",
-      "Average training accuracy in epoch 4: 99.404%\n",
-      "Average training accuracy in epoch 5: 99.442%\n"
+      "Average training accuracy in epoch 1: 95.646%\n",
+      "Average training accuracy in epoch 2: 98.990%\n",
+      "Average training accuracy in epoch 3: 99.210%\n",
+      "Average training accuracy in epoch 4: 99.320%\n",
+      "Average training accuracy in epoch 5: 99.472%\n"
      ]
     }
    ],
@@ -858,7 +855,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average validation accuracy: 98.880%\n"
+      "Average validation accuracy: 99.080%\n"
      ]
     }
    ],
@@ -934,7 +931,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "74a37bb2a84f441ca3de8cfd8e323ae2"
+       "model_id": "c65debfda4864d81ae9c706127b6397b"
       }
      },
      "metadata": {},
@@ -944,12 +941,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 94.742%\n",
-      "Average training accuracy in epoch 2: 98.922%\n",
-      "Average training accuracy in epoch 3: 99.168%\n",
-      "Average training accuracy in epoch 4: 99.428%\n",
-      "Average training accuracy in epoch 5: 99.472%\n",
-      "Average validation accuracy: 99.160%\n"
+      "Average training accuracy in epoch 1: 95.768%\n",
+      "Average training accuracy in epoch 2: 98.974%\n",
+      "Average training accuracy in epoch 3: 99.298%\n",
+      "Average training accuracy in epoch 4: 99.414%\n",
+      "Average training accuracy in epoch 5: 99.536%\n",
+      "Average validation accuracy: 98.900%\n"
      ]
     }
    ],
