Add scipy as optional dep

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "!pip install pytorch-functional networkx matplotlib tqdm"
+    "!pip install pytorch-functional networkx matplotlib scipy tqdm"
    ]
   },
   {
@@ -656,6 +656,7 @@
     "\n",
     "* matplotlib\n",
     "* networkx\n",
+    "* scipy\n",
     "\n",
     "Then import `from pytorch_functional.tools import draw_computation_graph`.\n",
     "\n",
