Rename doc pages, tools and config

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "!pip install pytorch-functional networkx matplotlib scipy tqdm"
+    "!pip install pytorch-functional networkx tqdm"
    ]
   },
   {
